# crewai-news

./: .gitignore  Gemini_report.md  Ollama_report.md  README.md  pyproject.toml  requirements.txt
src/newproj/: crew.py  main.py  tools.py
src/newproj/config/: agents.yaml  tasks.yaml
src/newproj/tools/: __init__.py
