[project]
name = "newproj"
version = "0.1.0"
description = "newProj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
newproj = "newproj.main:run"
run_crew = "newproj.main:run"
train = "newproj.main:train"
replay = "newproj.main:replay"
test = "newproj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
